--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -21,9 +21,8 @@ sourceSets {
 
 dependencies {
 
-    compile project(':datamanager:datamanager-api')
-    //compile project(':commons')
-    
+    compile project(':main-logic:logic-api')
+
     providedCompile 'log4j:log4j:1.2.17'
     providedCompile 'commons-logging:commons-logging:1.2'
     providedCompile 'javax:javaee-api:7.0'
